Bug 1565997 - CanvasPattern.setTransform should take a DOMMatrix2DInit r=emilio,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D80058